--- a/variaveis_projeto_aplicado.ipynb
+++ b/variaveis_projeto_aplicado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOFhVYcwZs+gmoMTYiKPqk",
+      "authorship_tag": "ABX9TyOlOijDVoExZttV4zd5slDH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,14 +31,16 @@
       "source": [
         "## Variáveis utilizadas\n",
         "\n",
-        "### Código do Indivíduo\n",
+        "### **Código do Indivíduo**\n",
         "> #### CO_PESSOA_SISVAN   \n",
         "> Código único que identifica\n",
         "o acompanhamento\n",
         "realizado pelo indivíduo\n",
         "> ***  \n",
         "\n",
-        "### Código do Indivíduo\n",
+        "&nbsp;\n",
+        "\n",
+        "### **Código do Município**\n",
         "> #### CO_MUNICIPIO_IBGE   \n",
         "> Código IBGE do município.\n",
         "Identifica o município onde\n",
@@ -46,7 +48,9 @@
         "indivíduo.\n",
         "> ***\n",
         "\n",
-        "### Idade em Anos\n",
+        "&nbsp;\n",
+        "\n",
+        "### **Idade em Anos**\n",
         "> #### NU_IDADE_ANO   \n",
         "> Anos de vida de uma\n",
         "pessoa no momento do\n",
@@ -56,8 +60,70 @@
         "Nascimento\n",
         "> ***\n",
         "\n",
-        "### Código da Fase da Vida\n",
-        "> #### NU_FASE_VIDA   \n",
+        "&nbsp;\n",
+        "\n",
+        "### **Sexo**\n",
+        "> #### SG_SEXO   \n",
+        "\n",
+        "|Código|Descrição|\n",
+        "|---|---|\n",
+        "|0|Masculino|\n",
+        "|1|Feminino|\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "\n",
+        "### **Código do Povo ou Comunidade Tradicional**\n",
+        "> #### CO_POVO_COMUNIDADE   \n",
+        "\n",
+        "|Código|Descrição|\n",
+        "|---|---|\n",
+        "1 | POVOS QUILOMBOLAS\n",
+        "2 | AGROEXTRATIVISTAS\n",
+        "3 | CAATINGUEIROS\n",
+        "4 | CAIÇARAS\n",
+        "5 | COMUNIDADES DE FUNDO E FECHO DE PASTO\n",
+        "6 | COMUNIDADES DO CERRADO\n",
+        "7 | EXTRATIVISTAS\n",
+        "8 | FAXINALENSES\n",
+        "9 | GERAIZEIROS\n",
+        "10 | MARISQUEIROS\n",
+        "11 | PANTANEIROS\n",
+        "12 | PESCADORES ARTESANAIS\n",
+        "13 | POMERANOS\n",
+        "14 | POVOS CIGANOS\n",
+        "15 | POVOS DE TERREIRO\n",
+        "16 | QUEBRADEIRAS DE COCO-DE-BABAÇU\n",
+        "17 | RETIREIROS\n",
+        "18 | RIBEIRINHOS\n",
+        "19 | SERINGUEIROS\n",
+        "20 | VAZANTEIROS\n",
+        "21 | OUTROS\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "### **Código da Escolaridade**\n",
+        "> #### CO_ESCOLARIDADE   \n",
+        "|Código|Descrição|\n",
+        "|---|---|\n",
+        "1 | Creche\n",
+        "2 | Pré-escola (exceto CA)\n",
+        "3 | Classe Alfabetizada - CA\n",
+        "4 | Ensino Fundamental 1ª a 4ª séries\n",
+        "5 | Ensino Fundamental 5ª a 8ª séries\n",
+        "6 | Ensino Fundamental Completo\n",
+        "7 | Ensino Fundamental Especial\n",
+        "8 | Ensino Fundamental EJA - séries iniciais (Supletivo 1ª a 4ª)\n",
+        "9 | Ensino Fundamental EJA - séries iniciais (Supletivo 5ª a 8ª)\n",
+        "10 | Ensino Médio, Médio 2º Ciclo (Científico, Técnico e etc)\n",
+        "11 | Ensino Médio Especial\n",
+        "12 | Ensino Médio EJA (Supletivo)\n",
+        "13 | Superior, Aperfeiçoamento, Especialização, Mestrado, Doutorado\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "### **Estado Nutricional de Peso para Idade de Crianças (0 a 10 anos)**\n",
+        "> #### PESO X IDADE   \n",
         "> Anos de vida de uma\n",
         "A fase da vida é calculada\n",
         "de acordo com a\n",
@@ -67,13 +133,33 @@
         "acompanhamento.\n",
         "> ***\n",
         "\n",
-        "### Sexo\n",
-        "> #### SG_SEXO   \n",
+        "&nbsp;\n",
         "\n",
-        "|Código|Descrição|\n",
-        "|---|---|\n",
-        "|0|Masculino|\n",
-        "|1|Feminino|\n"
+        "### **Estado Nutricional de Altura para Idade de Crianças (0 a 10 anos)**\n",
+        "> #### CRI. ALTURA X IDADE   \n",
+        "> Cálculo Nutricional de\n",
+        "crianças (0 a 10 anos) com\n",
+        "as seguintes informações:\n",
+        "'Muito baixa estatura para\n",
+        "idade', 'Baixa estatura para\n",
+        "idade', 'Estatura\n",
+        "adequada para a idade'\n",
+        "> ***\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "### **Estado Nutricional de IMC para Idade de Crianças (0 a 10 anos)**\n",
+        "> #### CRI. IMC X IDADE\n",
+        "> Cálculo Nutricional de\n",
+        "crianças (0 a 10 anos) com\n",
+        "as seguintes informações:\n",
+        "'Magreza acentuada’,\n",
+        "‘Magreza’, ‘Eutrofia', 'Risco\n",
+        "de sobrepeso',\n",
+        "'Sobrepeso', 'Obesidade'\n",
+        "> ***\n",
+        "\n",
+        "&nbsp;"
       ],
       "metadata": {
         "id": "z8oirgPZLaHg"
