--- a/variaveis_projeto_aplicado.ipynb
+++ b/variaveis_projeto_aplicado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlOijDVoExZttV4zd5slDH",
+      "authorship_tag": "ABX9TyM8fFlHhBa9LMbt3LVsbFXE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,27 +78,27 @@
         "\n",
         "|Código|Descrição|\n",
         "|---|---|\n",
-        "1 | POVOS QUILOMBOLAS\n",
-        "2 | AGROEXTRATIVISTAS\n",
-        "3 | CAATINGUEIROS\n",
-        "4 | CAIÇARAS\n",
-        "5 | COMUNIDADES DE FUNDO E FECHO DE PASTO\n",
-        "6 | COMUNIDADES DO CERRADO\n",
-        "7 | EXTRATIVISTAS\n",
-        "8 | FAXINALENSES\n",
-        "9 | GERAIZEIROS\n",
-        "10 | MARISQUEIROS\n",
-        "11 | PANTANEIROS\n",
-        "12 | PESCADORES ARTESANAIS\n",
-        "13 | POMERANOS\n",
-        "14 | POVOS CIGANOS\n",
-        "15 | POVOS DE TERREIRO\n",
-        "16 | QUEBRADEIRAS DE COCO-DE-BABAÇU\n",
-        "17 | RETIREIROS\n",
-        "18 | RIBEIRINHOS\n",
-        "19 | SERINGUEIROS\n",
-        "20 | VAZANTEIROS\n",
-        "21 | OUTROS\n",
+        "|1|POVOS QUILOMBOLAS|\n",
+        "|2 | AGROEXTRATIVISTAS|\n",
+        "|3 | CAATINGUEIROS|\n",
+        "|4 | CAIÇARAS|\n",
+        "|5 | COMUNIDADES DE FUNDO E FECHO DE PASTO|\n",
+        "|6 | COMUNIDADES DO CERRADO|\n",
+        "|7 | EXTRATIVISTAS|\n",
+        "|8 | FAXINALENSES|\n",
+        "|9 | GERAIZEIROS|\n",
+        "|10 | MARISQUEIROS|\n",
+        "|11 | PANTANEIROS|\n",
+        "|12 | PESCADORES ARTESANAIS|\n",
+        "|13 | POMERANOS|\n",
+        "|14 | POVOS CIGANOS|\n",
+        "|15 | POVOS DE TERREIRO|\n",
+        "|16 | QUEBRADEIRAS DE COCO-DE-BABAÇU|\n",
+        "|17 | RETIREIROS|\n",
+        "|18 | RIBEIRINHOS|\n",
+        "|19 | SERINGUEIROS|\n",
+        "|20 | VAZANTEIROS|\n",
+        "|21 | OUTROS|\n",
         "\n",
         "&nbsp;\n",
         "\n",
