--- a/variaveis_projeto_aplicado.ipynb
+++ b/variaveis_projeto_aplicado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8fFlHhBa9LMbt3LVsbFXE",
+      "authorship_tag": "ABX9TyOKdnPMwGzCPmdmguRC3KFo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,19 +106,19 @@
         "> #### CO_ESCOLARIDADE   \n",
         "|Código|Descrição|\n",
         "|---|---|\n",
-        "1 | Creche\n",
-        "2 | Pré-escola (exceto CA)\n",
-        "3 | Classe Alfabetizada - CA\n",
-        "4 | Ensino Fundamental 1ª a 4ª séries\n",
-        "5 | Ensino Fundamental 5ª a 8ª séries\n",
-        "6 | Ensino Fundamental Completo\n",
-        "7 | Ensino Fundamental Especial\n",
-        "8 | Ensino Fundamental EJA - séries iniciais (Supletivo 1ª a 4ª)\n",
-        "9 | Ensino Fundamental EJA - séries iniciais (Supletivo 5ª a 8ª)\n",
-        "10 | Ensino Médio, Médio 2º Ciclo (Científico, Técnico e etc)\n",
-        "11 | Ensino Médio Especial\n",
-        "12 | Ensino Médio EJA (Supletivo)\n",
-        "13 | Superior, Aperfeiçoamento, Especialização, Mestrado, Doutorado\n",
+        "|1 | Creche|\n",
+        "|2 | Pré-escola (exceto CA)|\n",
+        "|3 | Classe Alfabetizada - CA|\n",
+        "|4 | Ensino Fundamental 1ª a 4ª séries|\n",
+        "|5 | Ensino Fundamental 5ª a 8ª séries|\n",
+        "|6 | Ensino Fundamental Completo|\n",
+        "|7 | Ensino Fundamental Especial|\n",
+        "|8 | Ensino Fundamental EJA - séries iniciais (Supletivo 1ª a 4ª)|\n",
+        "|9 | Ensino Fundamental EJA - séries iniciais (Supletivo 5ª a 8ª)|\n",
+        "|10 | Ensino Médio, Médio 2º Ciclo (Científico, Técnico e etc)|\n",
+        "|11 | Ensino Médio Especial|\n",
+        "|12 | Ensino Médio EJA (Supletivo)|\n",
+        "|13 | Superior, Aperfeiçoamento, Especialização, Mestrado, Doutorado|\n",
         "\n",
         "&nbsp;\n",
         "\n",
