--- a/estudos_challenge.ipynb
+++ b/estudos_challenge.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyxqDWwUkgjWUU/uRn/Q5L",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPVnAOyVOBJDuAMZEU7+3Vi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,7 +205,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# Outros"
+      ],
       "metadata": {
         "id": "Q4LstaUVoh8X"
       }
