--- a/Cópia_de_Gráficos_do_projeto.ipynb
+++ b/Cópia_de_Gráficos_do_projeto.ipynb
@@ -648,7 +648,7 @@
         ")\n",
         "\n",
         "# Exibindo o gráfico\n",
-        "fig.show()\n",
+        "fig.show('png')\n",
         "fig.write_image(\"distribuicao-por-faixa-etaria-BARRAS-HORIZONTAIS.png\")"
       ],
       "metadata": {
