--- a/Machine_Learning_Projeto.ipynb
+++ b/Machine_Learning_Projeto.ipynb
@@ -2312,7 +2312,7 @@
       "source": [
         "# **Conclusão**\n",
         "\n",
-        "*Apresente a conclusão do seu estudo comparando ainda os resultados obtidos com o referencial teórico apresentado.*\n",
+        "A combinação de modelos de aprendizado de máquina, através do stacking, permitiu uma análise otimizada e mais precisa da qualidade do ar. A separação dos modelos em categorias de desempenho - bom, moderado e fraco - transformou avaliações qualitativas em métricas quantitativas, facilitando o ajuste dos hiperparâmetros e a escolha dos três modelos principais: LightGBM, CatBoost e XGBoost. Com a implementação do ensemble, o estimador final aprimorou significativamente a capacidade de previsão. Este projeto, fundamentado em referências teóricas sólidas como o livro \"Hands-On Machine Learning with Scikit-Learn\", alinha técnicas de ciência de dados e aprendizado de máquina com a ciência ambiental, seguindo diretrizes de órgãos como a OMS e a EPA. A preparação dos dados, incluindo o uso de Label Encoder, remoção de outliers e padronização com StandardScaler, foi crucial para o sucesso dos modelos preditivos. Assim, o projeto não apenas classifica a qualidade do ar de maneira eficiente, mas também fornece insights valiosos para decisões ambientais, maximizando o impacto positivo das políticas de controle de poluição.\n",
         "\n"
       ]
     },
