--- a/Machine_Learning_Projeto.ipynb
+++ b/Machine_Learning_Projeto.ipynb
@@ -226,8 +226,7 @@
       "source": [
         "# Base de Dados\n",
         "\n",
-        "Os dados são referentes\n",
-        "\n",
+        "No presente projeto, os dados meteorológicos utilizados foram extraídos do OpenWeatherMap (https://openweathermap.org), uma ferramenta online reconhecida pela sua precisão e atualização constante das condições climáticas, e seus dados foram essenciais para a realização das análises e previsões de qualidade do ar.\n",
         "\n"
       ]
     },
