Clean up widget state in projeto_aplicado_03.ipynb
Removed widget state information from the notebook.

--- a/projeto_aplicado_03.ipynb
+++ b/projeto_aplicado_03.ipynb
@@ -16,30 +16,7 @@
       "name": "python"
     },
     "accelerator": "GPU",
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "9328cbd9613148149258912385a3e25b": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_33e108ee2d494616ba1c733bea59f359",
-              "IPY_MODEL_abb242a2967b49da943293105e93a706",
-              "IPY_MODEL_a6de14ed43634ec6a9219699fb57c8d3"
-            ],
-            "layout": "IPY_MODEL_52733aec2475448b88ac20d49a3b98cd"
-          }
-        },
+    "widgets": {},
         "33e108ee2d494616ba1c733bea59f359": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
